--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <p>Hola Yandir!</p>
+    <h1 id="title">surver form yandir y luis</h1>
+    <p id="decription"> es esta para microverse</p>
+    <form id="surver-form" action="">
+      <input type="text" id="name" >
+      <input type="text" id ="email" pattern=".+@hotmail.com">
+      <input type="number" id="number" min="18" max="99">
+
+
+
+
+
+    </form>
+
 
     <!--
 
